# raggify

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: codecov.yaml
.github/workflows/: tests.yml
examples/: chroma.sh  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  init_pgdb.sh  init_redis.sh  sample01.py
examples/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
examples/rag/: __init__.py  agent.py  config.py  logger.py  main.py  run.sh  state.py
examples/rag/config/: config.py  settings.py
examples/rag/views/: admin.py  common.py  ingest.py  main_menu.py  ragsearch.py  search.py
examples/ragclient/: agent.py  api_client.py  logger.py  main.py
examples/ragclient/config/: config.py
examples/ragclient/views/: admin.py  common.py  ingest.py  main_menu.py  ragsearch.py  search.py
raggify/: .env.example  Makefile  README.md  pyproject.toml
raggify-client/: Makefile  README.md  pyproject.toml
raggify-client/src/raggify_client/: __init__.py  cli.py  client.py  config_manager.py  const.py  general_config.py  logger.py
raggify/src/: run.sh
raggify/src/raggify/: logger.py  runtime.py
raggify/src/raggify/cli/: cli.py
raggify/src/raggify/client/: client.py
raggify/src/raggify/config/: __init__.py  config_manager.py  default_settings.py  document_store_config.py  embed_config.py  general_config.py  ingest_cache_config.py  ingest_config.py  llm_config.py  meta_store_config.py  pipeline_config.py  rerank_config.py  settings.py  vector_store_config.py
raggify/src/raggify/core/: __init__.py  const.py  event.py  exts.py  metadata.py  utils.py
raggify/src/raggify/document_store/: document_store.py  document_store_manager.py
raggify/src/raggify/embed/: embed.py  embed_manager.py
raggify/src/raggify/ingest/: __init__.py  ingest.py  parser.py  transform.py  upsert.py  util.py
raggify/src/raggify/ingest/loader/: __init__.py  base_loader.py  file_loader.py  html_loader.py  loader.py  parser.py  web_page_loader.py
raggify/src/raggify/ingest/loader/file_reader/: __init__.py  audio_reader.py  html_file_reader.py  pdf_reader.py  video_reader.py
raggify/src/raggify/ingest/loader/html_reader/: __init__.py  default_html_reader.py  html_reader.py  wikipedia_reader.py
raggify/src/raggify/ingest/loader/reader/: dummy_media_reader.py  pdf_reader.py  video_reader.py
raggify/src/raggify/ingest/loader/web_page_reader/: __init__.py  base_web_page_reader.py  default_html_reader.py  default_web_page_reader.py  web_page_reader.py  wikipedia_reader.py
raggify/src/raggify/ingest/transform/: __init__.py  base_transform.py  caption_transform.py  embed_transform.py  media_split_transform.py  meta_transform.py  split_transform.py  splitter.py  summarize_transform.py  summarizer.py
raggify/src/raggify/ingest_cache/: ingest_cache.py  ingest_cache_manager.py
raggify/src/raggify/llama/core/: schema.py
raggify/src/raggify/llama/core/indices/multi_modal/: retriever.py
raggify/src/raggify/llama/embeddings/: clap.py  multi_modal_base.py
raggify/src/raggify/llama_like/core/: schema.py
raggify/src/raggify/llama_like/embeddings/: __init__.py  bedrock.py  clap.py  multi_modal_base.py
raggify/src/raggify/llm/: llm.py  llm_manager.py
raggify/src/raggify/meta_store/: __init__.py  meta_store.py
raggify/src/raggify/meta_store/structured/: sqlite_structured.py  structured.py
raggify/src/raggify/pipeline/: pipeline_manager.py
raggify/src/raggify/rerank/: rerank.py  rerank_manager.py
raggify/src/raggify/retrieve/: __init__.py  retrieve.py
raggify/src/raggify/server/: background_worker.py  fastapi.py  mcp.py
raggify/src/raggify/vector_store/: vector_store.py  vector_store_manager.py
src/raggify/: logger.py  runtime.py
src/raggify/cli/: cli.py
src/raggify/client/: client.py
src/raggify/config/: config_manager.py  default_settings.py  document_store_config.py  embed_config.py  general_config.py  ingest_cache_config.py  ingest_cache_store_config.py  ingest_config.py  rerank_config.py  retrieve_config.py  vector_store_config.py
src/raggify/core/: const.py  event.py  exts.py  metadata.py  util.py  utils.py
src/raggify/document_store/: document_store.py  document_store_manager.py
src/raggify/embed/: embed.py  embed_manager.py
src/raggify/ingest/: ingest.py  trans.py  transform.py
src/raggify/ingest/loader/: file_loader.py  html_loader.py  loader.py
src/raggify/ingest/loader/reader/: dummy_media_reader.py  movie_reader.py  pdf_reader.py  video_reader.py
src/raggify/ingest_cache/: ingest_cache.py  ingest_cache_manager.py
src/raggify/ingest_cache_store/: ingest_cache_store.py  ingest_cache_store_manager.py
src/raggify/llama/core/: schema.py
src/raggify/llama/embeddings/: bedrock.py  multi_modal_base.py
src/raggify/meta_store/: meta_store.py
src/raggify/meta_store/structured/: __init__.py  sqlite_structured.py  structured.py
src/raggify/rerank/: rerank.py  rerank_manager.py
src/raggify/retrieve/: __init__.py  retrieve.py
src/raggify/server/: background_worker.py  fastapi.py  mcp.py
src/raggify/vector_store/: vector_store.py  vector_store_manager.py
storage/: docstore.json
tests/: config.py  config.yaml  test_apicall.py  test_cli.py  test_client.py  test_document_store.py  test_document_store_manager.py  test_embed.py  test_embed_manager.py  test_file_reader.py  test_html_reader.py  test_ingest_cache.py  test_ingest_cache_manager.py  test_library_api.py  test_llama_like.py  test_llm.py  test_parser.py  test_rerank.py  test_rest_api_client.py  test_rest_api_server.py  test_transform.py  test_vector_store.py  test_vector_store_manager.py  test_web_page_reader.py
tests/data/texts/: sample.docx  sample.ipynb  sample.md  sample.py
tests/utils/: mock_client_cli.py  mock_document_store.py  mock_embed.py  mock_ingest_cache.py  mock_library_api.py  mock_llama_like.py  mock_llm.py  mock_parser.py  mock_reader.py  mock_rerank.py  mock_rest_api_client.py  mock_rest_api_server.py  mock_server_cli.py  mock_transform.py  mock_vector_store.py  node_factory.py
(+1 files in other folders)
