
[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "raggify"
version = "0.1.0"
description = "llama index based library for building multimodal RAG systems"
authors = [
    { name = "jun76", email = "jun76.git@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["rag", "multimodal", "embedding", "cli", "fastapi", "streamlit", "typer"]
dependencies = [
    "aiofiles",
    "chromadb",
    "docx2txt",
    "fastapi",
    "fastapi-mcp",
    "FlagEmbedding",
    "llama-index",
    "llama-index-core",
    "llama-index-embeddings-cohere @ git+https://github.com/run-llama/llama_index.git#subdirectory=llama-index-integrations/embeddings/llama-index-embeddings-cohere",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-voyageai",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-readers-web",
    "llama-index-vector-stores-chroma",
    "llama-index-vector-stores-postgres",
    "nbconvert",
    "pillow",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "pymupdf",
    "python-dotenv",
    "python-multipart",
    "requests",
    "starlette",
    "unstructured",
    "uvicorn[standard]",
]

[project.optional-dependencies]
local = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "laion-clap==1.1.7",
    "llama-index-embeddings-clip",
    "llama-index-embeddings-huggingface",
    "llama-index-postprocessor-flag-embedding-reranker",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "sentence-transformers==2.7.0",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
]
exam = [
    "openai-agents",
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/jun76/raggify"
Issues = "https://github.com/jun76/raggify/issues"

[project.scripts]
raggify = "raggify.cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
