[project]
name = "raggify"
version = "0.1.0"
description = "Multimodal RAG server and client"
readme = "README.md"
authors = [
    { name = "jun76", email = "jun76.git@gmail.com" }
]
requires-python = "==3.12.*"
dependencies = [
    "aiofiles",
    "chromadb",
    "docx2txt",
    "fastapi",
    "fastapi-mcp",
    "FlagEmbedding",
    "llama-index",
    "llama-index-core",
    "llama-index-embeddings-cohere @ git+https://github.com/run-llama/llama_index.git#subdirectory=llama-index-integrations/embeddings/llama-index-embeddings-cohere",
    "llama-index-embeddings-openai",
    "llama-index-embeddings-voyageai",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-readers-web",
    "llama-index-vector-stores-chroma",
    "llama-index-vector-stores-postgres",
    "nbconvert",
    "pillow",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "pymupdf",
    "python-dotenv",
    "python-multipart",
    "requests",
    "starlette",
    "unstructured",
    "uvicorn[standard]",
]

[project.optional-dependencies]
local = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "laion-clap==1.1.7",
    "llama-index-embeddings-clip",
    "llama-index-embeddings-huggingface",
    "llama-index-postprocessor-flag-embedding-reranker",
]
exam = [
    "openai-agents",
    "streamlit",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
raggify = "raggify.cli.cli:app"
