
[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "raggify"
version = "0.2.2"
description = "llama index based library for building multimodal RAG systems"
authors = [
    { name = "jun76", email = "jun76.git@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["rag", "multimodal", "embedding", "cli", "fastapi", "streamlit", "typer"]
dependencies = [
    "aiofiles",
    "chromadb",
    "docx2txt",
    "fastapi",
    "fastapi-mcp",
    "llama-index-embeddings-openai",
    "llama-index",
    "llama-index-core",
    "llama-index-readers-file",
    "llama-index-readers-web",
    "llama-index-readers-wikipedia",
    "llama-index-retrievers-bm25",
    "llama-index-vector-stores-chroma",
    "mashumaro",
    "nbconvert",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "raggify-client",
    "requests",
    "uvicorn[standard]",
    "wikipedia",
]

[project.optional-dependencies]
text = [
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
]
image = [
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
    "pymupdf",
]
audio = [
    "ffmpeg-python",
    "llama-index-embeddings-bedrock",
]
video = [
    "ffmpeg-python",
    "llama-index-embeddings-bedrock",
]
rerank = [
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-postprocessor-voyageai-rerank",
]
localmodel = [
    "FlagEmbedding",
    "laion-clap==1.1.7",
    "llama-index-embeddings-clip",
    "llama-index-embeddings-huggingface",
    "llama-index-postprocessor-flag-embedding-reranker",
    "sentence-transformers==2.7.0",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
]
postgres = [
    "llama-index-storage-docstore-postgres",
    "llama-index-storage-kvstore-postgres",
    "llama-index-vector-stores-postgres",
    "psycopg2-binary",
]
redis = [
    "llama-index-storage-docstore-redis",
    "llama-index-storage-kvstore-redis",
    "llama-index-vector-stores-redis",
]
exam = [
    "openai-agents",
    "streamlit",
]
dev = [
    "pytest",
    "pytest-cov",
]
all = [
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
    "pymupdf",
    "ffmpeg-python",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-postprocessor-voyageai-rerank",
    "FlagEmbedding",
    "laion-clap==1.1.7",
    "llama-index-embeddings-clip",
    "llama-index-embeddings-huggingface",
    "llama-index-postprocessor-flag-embedding-reranker",
    "sentence-transformers==2.7.0",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
    "llama-index-storage-docstore-postgres",
    "llama-index-storage-kvstore-postgres",
    "llama-index-vector-stores-postgres",
    "psycopg2-binary",
    "llama-index-storage-docstore-redis",
    "llama-index-vector-stores-redis",
    "openai-agents",
    "streamlit",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/jun76/raggify"
Issues = "https://github.com/jun76/raggify/issues"

[project.scripts]
raggify = "raggify.cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
