
[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "raggify"
version = "0.3.0"
description = "llama index based library for building multimodal RAG systems"
authors = [
    { name = "jun76", email = "jun76.git@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["rag", "multimodal", "embedding", "cli", "fastapi", "streamlit", "typer"]
dependencies = [
    "aiofiles",
    "docx2txt",
    "fastapi",
    "fastapi-mcp",
    "ipython",
    "llama-cloud-services",
    "llama-index-embeddings-openai",
    "llama-index==0.14.10",
    "llama-index-core==0.14.10",
    "llama-index-readers-file",
    "llama-index-readers-web",
    "llama-index-readers-wikipedia",
    "llama-index-retrievers-bm25",
    "mashumaro",
    "nbconvert",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "raggify-client",
    "requests",
    "typer",
    "uvicorn[standard]",
    "wikipedia",
]

[project.optional-dependencies]
text = [
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
]
image = [
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
    "pymupdf",
]
audio = [
    "ffmpeg-python",
    "llama-index-embeddings-bedrock",
]
video = [
    "ffmpeg-python",
    "llama-index-embeddings-bedrock",
]
rerank = [
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-postprocessor-voyageai-rerank",
]
postgres = [
    "llama-index-storage-docstore-postgres",
    "llama-index-storage-kvstore-postgres",
    "llama-index-vector-stores-postgres",
    "psycopg2-binary",
]
exam = [
    "openai-agents",
    "streamlit",
]
dev = [
    "pytest",
    "pytest-cov",
]
all = [
    "ffmpeg-python",
    "llama-index-embeddings-bedrock",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-voyageai",
    "llama-index-postprocessor-cohere-rerank",
    "llama-index-postprocessor-voyageai-rerank",
    "llama-index-storage-docstore-postgres",
    "llama-index-storage-kvstore-postgres",
    "llama-index-vector-stores-postgres",
    "openai-agents",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "pymupdf",
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/jun76/raggify"
Issues = "https://github.com/jun76/raggify/issues"

[project.scripts]
raggify = "raggify.cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
